relax saml2 validation rules to skip exceptions