@@ -8,7 +8,7 @@ import org.pac4j.core.profile.CommonProfile;
 import org.pac4j.core.profile.converter.Converters;
 import org.pac4j.core.profile.definition.CommonProfileDefinition;
 
-import java.util.List;
+import java.util.Arrays;
 
 /**
  * Profile definition for CAS.
@@ -40,7 +40,7 @@ public class CasProfileDefinition extends CommonProfileDefinition<CommonProfile>
         primary(FAMILY_NAME, Converters.STRING);
         primary(DISPLAY_NAME, Converters.STRING);
         primary(GENDER, Converters.STRING);
-        primary(LOCALE, new ChainingConverter(List.of(Converters.STRING, Converters.LOCALE)));
+        primary(LOCALE, new ChainingConverter(Arrays.asList(Converters.STRING, Converters.LOCALE)));
         primary(PICTURE_URL, Converters.STRING);
         primary(PROFILE_URL, Converters.STRING);
         primary(LOCATION, Converters.STRING);
